Fixed overflow issue on smaller devices for process section

--- a/slices/Process/styles.module.scss
+++ b/slices/Process/styles.module.scss
@@ -2,6 +2,7 @@
 
 .section {
   margin: 5rem auto;
+  overflow: hidden;
 
   @include mq("large") {
     margin: 7rem auto;
@@ -17,6 +18,7 @@
   @include mq("large") {
     margin-top: 5rem;
     gap: 5rem;
+    padding: 0 2.5rem 2.5rem 2.5rem;
   }
 }
 
@@ -49,6 +51,11 @@
     z-index: -1;
     bottom: -7.5rem;
     right: -7.5rem;
+    display: none;
+
+    @include mq("large") {
+      display: block;
+    }
   }
 }
 
@@ -60,12 +67,17 @@
     position: absolute;
     background-image: url("../../components/assets/illustrations/dotted-background.svg");
     background-repeat: no-repeat;
-    width: 15rem;
-    height: 15rem;
+    width: 20rem;
+    height: 20rem;
     content: "";
     z-index: -1;
-    bottom: -2.5rem;
+    bottom: -7.5rem;
     left: -2.5rem;
+    display: none;
+
+    @include mq("large") {
+      display: block;
+    }
   }
 }
 
